tests/fixtures/errors/cyclic_reference.lazy
obj = { x: obj.x + 1 }
obj.x
